Travis CI deploy config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
 language: rust
 rust:
-   - nightly
+   - nightly-2019-09-26
+deploy:
+   provider: releases
+   api_key: $GITHUB_OAUTH_TOKEN
+   skip_cleanup: true
+   on:
+      tags: true
