--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,18 @@ before_script:
    - rustup component add clippy
 rust:
    - stable
-   - beta
-   - nightly
 script:
+   - cargo test --all
    - cargo clippy --all-targets --all-features -- -D warnings
    - cargo fmt --all -- --check
+   - cargo build --release
+
 deploy:
    provider: releases
    api_key: $GITHUB_OAUTH_TOKEN
+   file: "target/release/bt"
    skip_cleanup: true
    on:
+      branch: master
       tags: true
+      rust: stable
