Update crate config in .toml file

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,11 @@ name = "bt"
 version = "0.1.0"
 authors = ["Łukasz Biel <lukasz.biel@anixe.pl>"]
 edition = "2018"
+description = "application to spawn template files"
+license-file = "LICENSE"
+documentation = "https://github.com/luke-biel/bt"
+homepage = "https://github.com/luke-biel/bt"
+repository = "https://github.com/luke-biel/bt"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
