--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "bt"
 version = "0.1.0"
-authors = ["Łukasz Biel <lukasz.biel@anixe.pl>"]
+authors = ["Łukasz Biel <lukasz.p.biel@gmail.com>"]
 edition = "2018"
 description = "application to spawn template files"
 license-file = "LICENSE"
