--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_deploy:
 deploy:
    provider: releases
    api_key: $GITHUB_OAUTH_TOKEN
-   file: "target/release/bt"
+   file: "target/release/bts"
    skip_cleanup: true
    on:
       branch: master
