--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,5 +27,5 @@ structopt = { version = "0.3.5", default-features = false }
 dirs      = "2.0.2"
 
 [dev-dependencies]
-test-case = "0.3.3"
-twox-hash = "1.5.0"
+test-case = "1.0.0-alpha-1"
+dir-assert = "0.1.0"
