--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 os:
    - linux
+   - windows
    - osx
 language: rust
 before_script:
@@ -9,6 +10,11 @@ rust:
    - stable
    - beta
    - nightly
+
+jobs:
+   allow_failures:
+      - rust: nightly
+
 script:
    - cargo test --all
    - cargo clippy --all-targets --all-features -- -D warnings
